Bug fixes and an improved GUI

--- a/web/index.html
+++ b/web/index.html
@@ -19,11 +19,11 @@
                 </div>
 
                 <div class="graph-container">
-                    <div class="graph-box">
+                    <div class="graph-box no-topbar" id="graph-box">
                         <div class="graph-box-topbar">
-                            <div id="graph-all-time" class="topbar-time-range" style="margin-right: 7.5px;" active>All time</div>
-                            <div id="graph-30d" class="topbar-time-range">30d</div>
-                            <div id="graph-7d" class="topbar-time-range">7d</div>
+                            <div id="graph-all-time" class="topbar-time-range" style="margin-right: 7.5px;">All time</div>
+                            <div id="graph-30d" class="topbar-time-range disabled">30d</div>
+                            <div id="graph-7d" class="topbar-time-range disabled">7d</div>
                         </div>
                         <div class="graph-box-content">
                             <div class="graph-canvas-container">
